# zenterm

./: .gitmodules  2026-07-17-mouse-and-image-fixes.md  2026-07-19-drag-bug-investigation.md  CURSOR_INVESTIGATION.md  Cargo.toml  DPI_WINDOWS.md  GLYPH_CLIP.md  LIGATURE.md  README.md  REFACTOR_PLAN.md  RENDERING_COMPARISON.md
crates/zenmux/: Cargo.toml
crates/zenmux-core/: Cargo.toml
crates/zenmux-core/src/: cell.rs  color.rs  damage.rs  error.rs  lib.rs  position.rs
crates/zenmux-glyph/: Cargo.toml
crates/zenmux-glyph/src/: builtin.rs  lib.rs
crates/zenmux-input/: Cargo.toml
crates/zenmux-input/src/: lib.rs
crates/zenmux-pty/: Cargo.toml
crates/zenmux-pty/src/: lib.rs
crates/zenmux-render/: Cargo.toml
crates/zenmux-render/src/: atlas.rs  callback.rs  lib.rs
crates/zenmux-term/: Cargo.toml
crates/zenmux-term/src/: term.rs
crates/zenmux-ui/: Cargo.toml
crates/zenmux-ui/src/: app.rs  lib.rs
crates/zenmux/src/: main.rs
crates/zenterm/: Cargo.toml
crates/zenterm-config/: Cargo.toml
crates/zenterm-config/src/: background.rs  colors.rs  config.rs  cursor.rs  font.rs  keyboard.rs  lib.rs  mouse.rs  selection.rs  terminal.rs  ui.rs  window.rs
crates/zenterm-core/: Cargo.toml
crates/zenterm-core/src/: cell.rs  color.rs  error.rs  image.rs  lib.rs  size.rs  theme.rs
crates/zenterm-glyph/: Cargo.toml
crates/zenterm-glyph/src/: allocate.rs  atlas_impl.rs  builtin.rs  font_list.rs  lib.rs  rasterize.rs
crates/zenterm-input/: Cargo.toml
crates/zenterm-input/src/: keys.rs  kitty.rs  lib.rs  sequences.rs  tests.rs
crates/zenterm-pty/: Cargo.toml
crates/zenterm-pty/src/: lib.rs
crates/zenterm-render/: Cargo.toml
crates/zenterm-render/src/: atlas.rs  callback.rs  lib.rs  shaders.rs
crates/zenterm-term/: Cargo.toml
crates/zenterm-term/src/: lib.rs  term.rs
crates/zenterm-term/src/image/: kitty.rs  mod.rs  placement.rs  sixel.rs
crates/zenterm-term/src/term/: color_scheme.rs  grid_view.rs  listener.rs  mod.rs  osc.rs  osc7.rs  terminal.rs
crates/zenterm-term/src/term/osc/: conemu.rs  iterm.rs  kitty_notify.rs  mod.rs  osc133.rs  tests.rs  util.rs
crates/zenterm-term/src/term/terminal/: image.rs  mod.rs  selection.rs  unicode.rs
crates/zenterm-ui/: Cargo.toml
crates/zenterm-ui/src/: app.rs  glyph_cache.rs  gpu.rs  layout_io.rs  legacy.rs  lib.rs  session.rs  settings.rs  settings_widgets.rs  sidebar.rs  tab.rs  tab_viewer.rs  workspace.rs
crates/zenterm-ui/src/app/: config.rs  dock.rs  keyboard.rs  mod.rs  persistence.rs  session_lifecycle.rs  settings.rs  theme.rs
crates/zenterm-ui/src/session/: badge.rs  effects.rs  mod.rs  mouse.rs  new.rs  osc7.rs  pty.rs  reinit.rs  shaping.rs  types.rs
crates/zenterm-ui/src/session/render/: ligature.rs  mod.rs  pass1.rs  pass3.rs
crates/zenterm/src/: main.rs
docs/: architecture.md  components.md  glossary.md  roadmap.md  tty7_comparison.md
docs/usages/: config.md
scripts/: package.ps1  package.sh
terminal-render-test/: .gitignore  README.md  zenterm-test.py
terminal-render-test/zenterm_test/: __init__.py  capability.py  fixtures.py  reporter.py  runner.py  selector.py  terminal.py
terminal-render-test/zenterm_test/tests/: __init__.py  all.py  colors.py  cursor.py  graphics.py  keyboard.py  modes.py  osc.py  queries.py  sgr.py  stress.py  unicode.py
