[package]
name = "zenterm"
version = "0.1.0"
edition = "2024"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
product-name = "Zenterm"
identifier = "org.eu.eslzzyl.zenterm"
icons = ["../../assets/icon.png"]

[dependencies]
zenterm-config = { path = "../zenterm-config" }
zenterm-ui = { path = "../zenterm-ui" }
eframe = "0.34"
egui = "0.34"
env_logger = "0.11"
log = "0.4"
notify-rust = "4"
wgpu = "29"
